Started CameraControl class, added ListBox in XAML.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -69,6 +69,30 @@
             <Button Content="Start Cam" Width="100" Height="25" HorizontalAlignment="Center" Click="StartCam_Click"/>
         </StackPanel>
 
+        <StackPanel Name="ImageStackPanel" Grid.Column="1" Orientation="Vertical">
+             <!--Big UI Image-->
+            <Image Name ="imageBox" Source="{Binding MainImage}" Margin="5"/>
+
+            <!--sam: the "selected item" binds the object selected (calls "set") to a property in the context inherited by ListBox-->
+            <ListBox ItemsSource="{Binding ImageSourceThumbnails}" SelectedItem="{Binding MainImage}"  Height="110">
+                <!--sam: once inside here, the context gets updated to the objects inside the listbox. If you want to bind to the object itself use
+            the {Binding .}, else use the property name straight up. E.g. if listbox has inside a object containing "string txt" you can do
+            {Binding txt} and it will show the text-->
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Image Source="{Binding .}" MaxHeight="80"/>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Horizontal" />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+
+            </ListBox>
+        </StackPanel>
+
 
 
     </Grid>
