--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -27,7 +27,7 @@
             <TextBlock Text="Duration (s)" Width="Auto" HorizontalAlignment="Center"/>
             <StackPanel Orientation="Horizontal" Margin="5, 10, 5, 20">
                 <Button Content="--" Width="30" Click="DurationMinus2_Click"/>
-                <Button Content="-" Width="30" Click="DurationMinus2_Click"/>
+                <Button Content="-" Width="30" Click="DurationMinus_Click"/>
                 <TextBox Text="{Binding DurationBox}" Width="40pt"/>
                 <Button Content="+" Width="30" Click="DurationPlus_Click"/>
                 <Button Content="++" Width="30" Click="DurationPlus2_Click"/>
@@ -66,7 +66,7 @@
             <Button Content="Record" Width="100" Height="50" Margin="0,20,0,20" Click="Record_Click"/>
             <Button Content="Stop" Width="100" Height="50" Margin="0,20,0,20" Click="Stop_Click"/>
             <TextBlock Text="AVI Frame Rate:" HorizontalAlignment="Center"/>
-            <TextBox Text="{Binding AviFrameRate}" Width="40pt"/>
+            <TextBox Text="{Binding AviRateBox}" Width="40pt"/>
             <Button Content="Browse" Width="100" Height="25" Margin="0,20,0,20" Click="Browse_Click"/>
 
             <Button Name="StartStopButton" Content="Start Cam" Width="100" Height="25" HorizontalAlignment="Center" Click="StartCam_Click"/>
