--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -15,8 +15,8 @@
 
         <StackPanel Name="SettingsGrid" Grid.Column="0" Orientation="Vertical">
             <!--Exposure Setting-->
-            <TextBlock Text="Exposure (μs)" Width="Auto" HorizontalAlignment="Center" Margin="0,15,0,0"/>
-            <StackPanel Orientation="Horizontal" Margin="5, 10, 5, 20">
+            <TextBlock Text="Exposure (μs)" Width="Auto" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+            <StackPanel Orientation="Horizontal" Margin="5, 5, 5, 5">
                 <Button Content="--" Width="30" Click="ExposureMinus2_Click"/>
                 <Button Content="-" Width="30" Click="ExposureMinus_Click"/>
                 <TextBox Text="{Binding ExposureBox}" Width="40pt"/>
@@ -26,7 +26,7 @@
             
             <!--Duration Setting-->
             <TextBlock Text="Duration (s)" Width="Auto" HorizontalAlignment="Center"/>
-            <StackPanel Orientation="Horizontal" Margin="5, 10, 5, 20">
+            <StackPanel Orientation="Horizontal" Margin="5, 5, 5, 5">
                 <Button Content="--" Width="30" Click="DurationMinus2_Click"/>
                 <Button Content="-" Width="30" Click="DurationMinus_Click"/>
                 <TextBox Text="{Binding DurationBox}" Width="40pt"/>
@@ -36,7 +36,7 @@
 
             <!-- # of Frames Setting-->
             <TextBlock Text="# of Frames" Width="Auto" HorizontalAlignment="Center"/>
-            <StackPanel Orientation="Horizontal" Margin="5, 10, 5, 20">
+            <StackPanel Orientation="Horizontal" Margin="5, 5, 5, 5">
                 <Button Content="--" Width="30" Click="FramesMinus2_Click"/>
                 <Button Content="-" Width="30" Click="FramesMinus_Click"/>
                 <TextBox Text="{Binding FramesBox}" Width="40pt"/>
@@ -46,7 +46,7 @@
 
             <!-- Frame Rate Setting-->
             <TextBlock Text="Frame Rate" Width="Auto" HorizontalAlignment="Center"/>
-            <StackPanel Orientation="Horizontal" Margin="5, 10, 5, 20">
+            <StackPanel Orientation="Horizontal" Margin="5, 5, 5, 5">
                 <Button Content="--" Width="30" Click="RateMinus2_Click"/>
                 <Button Content="-" Width="30" Click="RateMinus_Click"/>
                 <TextBox Text="{Binding RateBox}" Width="40pt"/>
@@ -63,12 +63,14 @@
                 <Button Content="+" Width="30" Click="TimerPlus_Click"/>
             </StackPanel>
 
-            <Button Content="Capture" Width="100" Height="50" Margin="0,20,0,20" Click="Capture_Click"/>
-            <Button Content="Record" Width="100" Height="50" Margin="0,20,0,20" Click="Record_Click"/>
-            <Button Content="Stop" Width="100" Height="50" Margin="0,20,0,20" Click="Stop_Click"/>
-            <TextBlock Text="AVI Frame Rate:" HorizontalAlignment="Center"/>
-            <TextBox Text="{Binding AviRateBox}" Width="40pt"/>
-            <Button Content="Browse" Width="100" Height="25" Margin="0,20,0,20" Click="Browse_Click"/>
+            <Button Content="Capture" Width="100" Height="50" Margin="0,10,0,10" Click="Capture_Click"/>
+            <Button Content="Record" Width="100" Height="50" Margin="0,10,0,10" Click="Record_Click"/>
+            <Button Content="Stop" Width="100" Height="50" Margin="0,10,0,10" Click="Stop_Click"/>
+            <TextBlock Text="AVI Frame Rate (fps):" HorizontalAlignment="Center"/>
+
+            <TextBox Name="AviRateBoxView" Text="{Binding AviRateBox}" Width="40pt" TextAlignment="Center"/>
+            <Button Content="Browse" Width="100" Height="25" Margin="0,10,0,0" Click="Browse_Click"/>
+            <TextBlock Name="AviPathView" Text="{Binding AviPath}" HorizontalAlignment="Center" MaxWidth="180" Margin="0,0,0,10"/>
 
             <Button Name="StartStopButton" Content="Start Cam" Width="100" Height="25" HorizontalAlignment="Center" Click="StartCam_Click"/>
         </StackPanel>
