--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -66,13 +66,21 @@
             <Button Content="Capture" Width="100" Height="50" Margin="0,10,0,10" Click="Capture_Click"/>
             <Button Content="Record" Width="100" Height="50" Margin="0,10,0,10" Click="Record_Click"/>
             <Button Content="Stop" Width="100" Height="50" Margin="0,10,0,10" Click="Stop_Click"/>
+            
             <TextBlock Text="AVI Frame Rate (fps):" HorizontalAlignment="Center"/>
-
-            <TextBox Name="AviRateBoxView" Text="{Binding AviRateBox}" Width="40pt" TextAlignment="Center"/>
+            <TextBox Name="AviRateBoxView" Text="{Binding AviRateBox}" Width="40pt" TextAlignment="Center" Margin="0,5,0, 10"/>
+            <TextBlock Text="AVI Format:" HorizontalAlignment="Center"/>
+            <!--Radio Buttons-->
+            <StackPanel HorizontalAlignment="Center" Margin="0,5,0,5">
+                <RadioButton Name="Uncompressed"  GroupName="AviFormat" Checked="FormatChanged" Content="Uncompressed"/>
+                <RadioButton Name="Mjpg" GroupName="AviFormat" Checked="FormatChanged" Content="M-JPEG"/>
+                <RadioButton Name="H264" GroupName="AviFormat" Checked="FormatChanged" Content="H264" IsChecked="True"/>
+            </StackPanel>
+            
             <Button Content="Browse" Width="100" Height="25" Margin="0,10,0,0" Click="Browse_Click"/>
             <TextBlock Name="AviPathView" Text="{Binding AviPath}" HorizontalAlignment="Center" MaxWidth="180" Margin="0,0,0,10"/>
 
-            <Button Name="StartStopButton" Content="Start Cam" Width="100" Height="25" HorizontalAlignment="Center" Click="StartCam_Click"/>
+            <Button Name="StartStopButton" Content="Start Cam" Width="100" Height="50" HorizontalAlignment="Center" Click="StartCam_Click"/>
         </StackPanel>
 
         <StackPanel Name="ImageStackPanel" Grid.Column="1" Orientation="Vertical">
