--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -76,7 +76,10 @@
                 <RadioButton Name="Mjpg" GroupName="AviFormat" Checked="FormatChanged" Content="M-JPEG"/>
                 <RadioButton Name="H264" GroupName="AviFormat" Checked="FormatChanged" Content="H264" IsChecked="True"/>
             </StackPanel>
-            
+
+            <TextBlock Text="Compression Quality:" HorizontalAlignment="Center" Margin="0,5,0,6"/>
+            <TextBox Name="QualityBoxView" Text="{Binding QualityBox}" Width="40" TextAlignment="Center"/>
+
             <Button Content="Browse" Width="100" Height="25" Margin="0,10,0,0" Click="Browse_Click"/>
             <TextBlock Name="AviPathView" Text="{Binding AviPath}" HorizontalAlignment="Center" MaxWidth="180" Margin="0,0,0,10"/>
 
@@ -106,8 +109,6 @@
 
             </ListBox>
         </StackPanel>
-
-
 
     </Grid>
 </Window>
