--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -57,14 +57,14 @@
             
             <!-- Timer Setting-->
             <TextBlock Text="Timer (s)" Width="Auto" HorizontalAlignment="Center"/>
-            <StackPanel Orientation="Horizontal" Margin="5, 10, 5, 20" HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal" Margin="5, 5, 5, 10" HorizontalAlignment="Center">
                 <Button Content="-" Width="30" Click="TimerMinus_Click"/>
                 <TextBox Text="{Binding TimerBox}" Width="40pt"/>
                 <Button Content="+" Width="30" Click="TimerPlus_Click"/>
             </StackPanel>
 
             <Button Content="Capture" Width="100" Height="50" Margin="0,10,0,10" Click="Capture_Click"/>
-            <Button Content="Record" Width="100" Height="50" Margin="0,10,0,10" Click="Record_Click"/>
+            <Button Content="Record" Width="100" Height="50" Margin="0,5,0,5" Click="Record_Click"/>
             <Button Content="Stop" Width="100" Height="50" Margin="0,10,0,10" Click="Stop_Click"/>
             
             <TextBlock Text="AVI Frame Rate (fps):" HorizontalAlignment="Center"/>
@@ -82,6 +82,7 @@
 
             <Button Content="Browse" Width="100" Height="25" Margin="0,10,0,0" Click="Browse_Click"/>
             <TextBlock Name="AviPathView" Text="{Binding AviPath}" HorizontalAlignment="Center" MaxWidth="180" Margin="0,0,0,10"/>
+            <Button Content="Save Captures" Width="100" Height="25" Margin="0,5,0,15" Click="SaveCaptures_Click"/>
 
             <Button Name="StartStopButton" Content="Start Cam" Width="100" Height="50" HorizontalAlignment="Center" Click="StartCam_Click"/>
         </StackPanel>
